add bipartite tournaments paper

--- a/macros.tex
+++ b/macros.tex
@@ -15,3 +15,7 @@
 \theoremstyle{plain}\newtheorem{claim}{Claim}
 \theoremstyle{plain}\newtheorem{corollary}{Corollary}
 \theoremstyle{plain}\newtheorem{axiom}{Axiom}
+
+% inline list
+\newlist{inlinelist}{enumerate*}{1}
+\setlist[inlinelist]{label=(\roman*)}
