--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 
 % packages
 \usepackage{newpxtext} % palatino font
+% \usepackage[T1]{fontenc}
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage[backend=biber]{biblatex}
@@ -10,9 +11,16 @@
 \usepackage{amssymb}
 \usepackage[capitalise]{cleveref}
 \usepackage{graphicx}
+\usepackage{tikz}
+\usepackage{bm}
+\usepackage[inline]{enumitem}
 
 % line spacing
-\OnehalfSpacing
+% \OnehalfSpacing
+
+\setlrmarginsandblock{3.5cm}{*}{1}
+\setulmarginsandblock{3.5cm}{*}{1}
+\checkandfixthelayout
 
 % numbering
 \setsecnumdepth{subsubsection}
