--- a/references.bib
+++ b/references.bib
@@ -695,3 +695,321 @@ series = {AAMAS ’20}
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
+@article{gonzalez2014paired,
+  title={Paired comparisons analysis: an axiomatic approach to ranking methods},
+  author={Gonz{\'a}lez-D{\'\i}az, Julio and Hendrickx, Ruud and Lohmann, Edwin},
+  journal={Social Choice and Welfare},
+  volume={42},
+  number={1},
+  pages={139--169},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{slutzki2005ranking,
+  title={Ranking participants in generalized tournaments},
+  author={Slutzki, Giora and Volij, Oscar},
+  journal={International Journal of Game Theory},
+  volume={33},
+  number={2},
+  pages={255--270},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{csato2019impossibility,
+  title={An impossibility theorem for paired comparisons},
+  author={Csat{\'o}, L{\'a}szl{\'o}},
+  journal={Central European Journal of Operations Research},
+  volume={27},
+  number={2},
+  pages={497--514},
+  year={2019},
+  publisher={Springer}
+}
+
+@incollection{drange2015threshold,
+  title={On the threshold of intractability},
+  author={Drange, P{\aa}l Gr{\o}n{\aa}s and Dregi, Markus Sortland and
+  Lokshtanov, Daniel and Sullivan, Blair D.},
+  booktitle={Algorithms-ESA 2015},
+  pages={411--423},
+  year={2015},
+  publisher={Springer}
+}
+
+@inproceedings{jiao2017algorithms,
+  title={Algorithms for automatic ranking of participants and tasks in an anonymized contest},
+  author={Jiao, Yang and Ravi, R and Gatterbauer, Wolfgang},
+  booktitle={International Workshop on Algorithms and Computation},
+  pages={335--346},
+  year={2017},
+  organization={Springer}
+}
+
+@article{rubinstein1980ranking,
+  title={Ranking the participants in a tournament},
+  author={Rubinstein, Ariel},
+  journal={SIAM Journal on Applied Mathematics},
+  volume={38},
+  number={1},
+  pages={108--111},
+  year={1980},
+  publisher={SIAM}
+}
+
+@article{brozos_vazquez_2008,
+	doi = {10.1016/j.jmateco.2008.03.002},
+	url = {https://doi.org/10.1016%2Fj.jmateco.2008.03.002},
+	year = 2008,
+	month = {dec},
+	publisher = {Elsevier {BV}},
+	volume = {44},
+	number = {11},
+	pages = {1246--1256},
+	author = {Miguel Brozos-V{\'{a}}zquez and Marco Antonio Campo-Cabana and Jos{\'{e}} Carlos D{\'{\i}}az-Ramos and Julio Gonz{\'{a}}lez-D{\'{\i}}az},
+	title = {Ranking participants in tournaments by means of rating functions},
+	journal = {Journal of Mathematical Economics}
+}
+
+@incollection{brandt2016a,
+    title={Tournament Solutions},
+    booktitle={Handbook of Computational Social Choice},
+    publisher={Cambridge University Press},
+    author={Brandt, Felix and Brill, Markus and Harrenstein, Paul and Moulin,
+    Hervé},
+    editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang,
+    Jérôme and Procaccia, Ariel D.},
+    year={2016},
+    pages={57–84}
+}
+
+@article{natanzon2000polynomial,
+  title={A polynomial approximation algorithm for the minimum fill-in problem},
+  author={Natanzon, Assaf and Shamir, Ron and Sharan, Roded},
+  journal={SIAM Journal on Computing},
+  volume={30},
+  number={4},
+  pages={1067--1079},
+  year={2000},
+  publisher={SIAM}
+}
+
+@article{natanzon2001complexity,
+  title={Complexity classification of some edge modification problems},
+  author={Natanzon, Assaf and Shamir, Ron and Sharan, Roded},
+  journal={Discrete Applied Mathematics},
+  volume={113},
+  number={1},
+  pages={109--128},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@online{olsson2018skill,
+      title={Skill Rating for Generative Models},
+      author={Catherine Olsson and Surya Bhupatiraju and Tom Brown and Augustus Odena and Ian Goodfellow},
+      year={2018},
+      eprint={1808.04888},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@article{bozoki2016application,
+  title={An application of incomplete pairwise comparison matrices for ranking top tennis players},
+  author={Boz{\'o}ki, S{\'a}ndor and Csat{\'o}, L{\'a}szl{\'o} and Temesi, J{\'o}zsef},
+  journal={European Journal of Operational Research},
+  volume={248},
+  number={1},
+  pages={211--218},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{slutzki2006scoring,
+  title={Scoring of web pages and tournaments—axiomatizations},
+  author={Slutzki, Giora and Volij, Oscar},
+  journal={Social Choice and Welfare},
+  volume={26},
+  number={1},
+  pages={75--92},
+  year={2006},
+  publisher={Springer}
+}
+
+@article{li_survey_2016,
+	title = {A {Survey} on {Truth} {Discovery}},
+	volume = {17},
+	issn = {1931-0145},
+	number = {2},
+	journal = {SIGKDD Explor. Newsl.},
+	author = {Li, Yaliang and Gao, Jing and Meng, Chuishi and Li, Qi and Su, Lu and Zhao, Bo and Fan, Wei and Han, Jiawei},
+	month = feb,
+	year = {2016},
+	keywords = {td, survey},
+	pages = {1--16},
+	file = {Li et al. - 2016 - A Survey on Truth Discovery.pdf:/home/joe/Zotero/storage/DT3IWHVW/Li et al. - 2016 - A Survey on Truth Discovery.pdf:application/pdf}
+}
+
+@article{yannakakis1981computing,
+  title={Computing the minimum fill-in is NP-complete},
+  author={Yannakakis, Mihalis},
+  journal={SIAM Journal on Algebraic Discrete Methods},
+  volume={2},
+  number={1},
+  pages={77--79},
+  year={1981},
+  publisher={SIAM}
+}
+
+@article{fomin_2013,
+	doi = {10.1007/s00453-013-9776-1},
+	url = {https://doi.org/10.1007%2Fs00453-013-9776-1},
+	year = 2013,
+	month = {apr},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {71},
+	number = {1},
+	pages = {1--20},
+	author = {Fedor V. Fomin and Geevarghese Philip and Yngve Villanger},
+	title = {Minimum Fill-in of Sparse Graphs: Kernelization and Approximation},
+	journal = {Algorithmica}
+}
+
+@article{cook2015nested,
+  title={Nested colorings of graphs},
+  author={Cook II, David},
+  journal={Australasian Journal of Combinatorics},
+  volume={62},
+  number={1},
+  pages={100--127},
+  year={2015}
+}
+
+@article{andelic_2015,
+title = "Some new considerations about double nested graphs",
+journal = "Linear Algebra and its Applications",
+volume = "483",
+pages = "323 - 341",
+year = "2015",
+author = "Milica An{\dj}eli{\'c} and Enide Andrade and Domingos M. Cardoso and
+Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
+}
+
+@online{ghorbani2017spectral,
+    title={Some spectral properties of chain graphs},
+    author={Ebrahim Ghorbani},
+    year={2017},
+    eprint={1703.03581},
+    archivePrefix={arXiv},
+    primaryClass={math.CO}
+}
+
+@article{bouyssou2004monotonicity,
+  title={Monotonicity of ‘ranking by choosing’: A progress report},
+  author={Bouyssou, Denis},
+  journal={Social Choice and Welfare},
+  volume={23},
+  number={2},
+  pages={249--273},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{bradley_terry_52,
+ ISSN = {00063444},
+ author = {Ralph Allan Bradley and Milton E. Terry},
+ journal = {Biometrika},
+ number = {3/4},
+ pages = {324--345},
+ publisher = {[Oxford University Press, Biometrika Trust]},
+ title = {Rank Analysis of Incomplete Block Designs: I. The Method of Paired Comparisons},
+ volume = {39},
+ year = {1952}
+}
+
+@incollection{elkind2016rationalizations,
+    title={Rationalizations of voting rules},
+    booktitle={Handbook of Computational Social Choice},
+    publisher={Cambridge University Press},
+    author={Elkind, Edith and Slinko, Arkadii},
+    editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang,
+    Jérôme and Procaccia, Ariel D.},
+    year={2016},
+    pages={169-196}
+}
+
+@inproceedings{everaere2020,
+  title     = {Belief Merging Operators as Maximum Likelihood Estimators},
+  author    = {Everaere, Patricia and Konieczny, Sebastien and Marquis, Pierre},
+  booktitle = {Proceedings of the Twenty-Ninth International Joint Conference on
+               Artificial Intelligence, {IJCAI-20}},
+  publisher = {International Joint Conferences on Artificial Intelligence Organization},
+  editor    = {Christian Bessiere},
+  pages     = {1763--1769},
+  year      = {2020},
+  month     = {7},
+}
+
+@inproceedings{wang_truth_2012,
+	address = {New York},
+	series = {{IPSN} '12},
+	title = {On {Truth} {Discovery} in {Social} {Sensing}: {A} {Maximum} {Likelihood} {Estimation} {Approach}},
+	isbn = {978-1-4503-1227-1},
+	booktitle = {Proceedings of the 11th {International} {Conference} on {Information} {Processing} in {Sensor} {Networks}},
+	publisher = {ACM},
+	author = {Wang, Dong and Kaplan, Lance and Le, Hieu and Abdelzaher, Tarek},
+	year = {2012},
+	keywords = {td},
+	pages = {233--244},
+}
+
+@inproceedings{singleton_booth_2020,
+author = {Singleton, Joseph and Booth, Richard},
+title = {An Axiomatic Approach to Truth Discovery},
+year = {2020},
+isbn = {9781450375184},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+booktitle = {Proceedings of the 19th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {2011–2013},
+numpages = {3},
+keywords = {social choice theory, trust and reputation, axioms, truth discovery},
+location = {Auckland, New Zealand},
+series = {AAMAS ’20}
+}
+
+@inproceedings{denny_peerwise_2008,
+  author = {Denny, Paul and Hamer, John and Luxton-Reilly, Andrew and Purchase, Helen},
+  title = {PeerWise: Students Sharing Their Multiple Choice Questions},
+  year = {2008},
+  publisher = {ACM},
+  address = {New York},
+  booktitle = {Proceedings of the Fourth International Workshop on Computing Education Research},
+  pages = {51–58},
+  numpages = {8},
+  keywords = {automated, peerwise, MCQ, question test bank, peer assessment, contributing student},
+  location = {Sydney, Australia},
+  series = {ICER '08}
+}
+
+@inproceedings{galland_corroborating_2010,
+	address = {New York},
+	series = {{WSDM} '10},
+	title = {Corroborating {Information} from {Disagreeing} {Views}},
+	isbn = {978-1-60558-889-6},
+	booktitle = {Proceedings of the {Third} {ACM} {International} {Conference} on {Web} {Search} and {Data} {Mining}},
+	publisher = {ACM},
+	author = {Galland, Alban and Abiteboul, Serge and Marian, Amélie and Senellart, Pierre},
+	year = {2010},
+	pages = {131--140},
+}
+
+@misc{singleton_booth_21_arxiv,
+      title={Rankings for Bipartite Tournaments via Chain Editing},
+      author={Joseph Singleton and Richard Booth},
+      year={2021},
+      eprint={2101.02476},
+      archivePrefix={arXiv},
+      primaryClass={cs.MA}
+}
