new provisional title

--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@
 
 % metadata
 \title{
-    Handling Unreliable Information
+    Trustworthiness and Expertise: Social Choice and Logic-based Perspectives
 }
 
 % for development only
