--- a/abstract.tex
+++ b/abstract.tex
@@ -1,1 +1,62 @@
-This is a short summary of the thesis. What a great thesis it's going to be.
+% % max 300 words
+
+% \begin{notes}
+%     \begin{itemize}
+%         \item Problems: unreliable information, information from untrustworthy
+%               or non-expert sources
+%         \item We look at aggregating information, assessing the trustworthiness
+%               of sources and reasoning about expertise.
+%         \item Two core goals: find the \emph{truth}, and to aggregate
+%               \emph{rationally}.
+%         \item In the first part we use methodology of social choice theory
+%               by taking an \emph{axiomatic approach}, where normative properties
+%               of aggregation methods (called \emph{axioms}) are introduced, and
+%               their interactions and consequences studied. Insights about
+%               specific aggregation methods can be obtained by seeing which
+%               axioms hold.
+%         \item In the second part we take a logic-based perspective, including a
+%               modal logic framework to reason about expertise,
+%               and another look at the aggregation problem through the lens of
+%               rational belief change.
+%         \item The results which will be presented are of a conceptual -- and
+%               sometimes technical -- nature.
+%         \item It is hoped that our formal approach elucidates interesting
+%               properties of the problem and possible solution methods. These
+%               properties may be considered in subsequent practical
+%               applications.
+%     \end{itemize}
+% \end{notes}
+
+This thesis studies problems involving unreliable information. We look at how
+to aggregate conflicting reports from multiple unreliable sources, how to
+assess the trustworthiness and expertise of sources, and investigate the extent
+to which the truth can be found with imperfect information.
+%
+We take a formal approach, developing mathematical frameworks in which these
+problems can be formulated precisely and their properties studied. The results
+are of a conceptual and technical nature, which aim to elucidate interesting
+properties of the problem at the core abstract level.
+
+In the first half we adopt the axiomatic approach of \emph{social choice
+theory}. We formulate \emph{truth discovery} -- the problem of aggregating
+reports to estimate true information and reliability of the sources -- as a
+social choice problem. We apply the axiomatic method to investigate desirable
+properties of such aggregation methods, and analyse a specific truth discovery
+method from the literature.
+%
+We go on to study ranking methods for \emph{bipartite tournaments}. This
+setting can be applied to rank sources according to their accuracy on a number
+of topics, and is also of independent interest.
+
+In the second half we take a logic-based perspective. We use modal logic to
+formalise the notion of expertise, and explore connections with knowledge and
+truthfulness of information. We use this as the foundation for a belief change
+problem, in which reports must be aggregated to form beliefs about the true
+state of the world and the expertise of the sources. We again take an axiomatic
+approach -- this time in the tradition of belief revision -- where several
+postulates are proposed as rationality criteria.
+%
+Finally, we address \emph{truth-tracking}: the problem of finding the truth
+given non-expert reports. Adapting recent work combining logic with formal
+learning theory, we investigate the extent to which truth-tracking is possible,
+and how truth-tracking interacts with rationality.
