--- a/body.tex
+++ b/body.tex
@@ -2,6 +2,7 @@
 \input{chapters/introduction/content.tex}
 
 \part{Social Choice Perspectives}
+\label{part_social_choice}
 
 \input{chapters/social-choice-introduction/content.tex}
 
@@ -16,6 +17,8 @@
 }
 
 \part{Logic-based Perspectives}
+\label{part_logic_based}
+
 \input{chapters/logic-introduction/content.tex}
 \input{chapters/expertise/content.tex}
 \input{chapters/belief-change/content.tex}
