--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 \usepackage{subcaption}
 
 % line spacing
-% \OnehalfSpacing
+\OnehalfSpacing
 
 \setlrmarginsandblock{3.5cm}{*}{1}
 \setulmarginsandblock{3.5cm}{*}{1}
