--- a/publications.tex
+++ b/publications.tex
@@ -1,10 +1,9 @@
 The content of this thesis is derived from the following publications.
+\todo{Add descriptions and chapter referencesbeneath each citation?}
 
 \begin{itemize}
-    \item
-        \fullcite{singleton_booth_22}
-
-        This work appears in some chapter later on.
-
-    \item And another
+    \item \fullcite{singleton_booth_2020}
+    \item \fullcite{singleton_booth_bipartite}
+    \item \fullcite{singleton2021logic}
+    \item \fullcite{singleton_booth_22}
 \end{itemize}
