--- a/references.bib
+++ b/references.bib
@@ -1005,11 +1005,252 @@ series = {AAMAS ’20}
 	pages = {131--140},
 }
 
-@misc{singleton_booth_21_arxiv,
-      title={Rankings for Bipartite Tournaments via Chain Editing},
-      author={Joseph Singleton and Richard Booth},
-      year={2021},
-      eprint={2101.02476},
-      archivePrefix={arXiv},
-      primaryClass={cs.MA}
+@article{goranko_1992,
+	year = 1992,
+	publisher = {Oxford University Press ({OUP})},
+	volume = {2},
+	number = {1},
+	pages = {5--30},
+	author = {Valentin Goranko and Solomon Passy},
+	title = {Using the Universal Modality: Gains and Questions},
+	journal = {Journal of Logic and Computation}
 }
+
+@book{pacuit2017neighborhood,
+  title={Neighborhood semantics for modal logic},
+  author={Pacuit, Eric},
+  year={2017},
+  publisher={Springer International Publishing}
+}
+
+@book{fagin2003reasoning,
+  title={Reasoning about knowledge},
+  author={Fagin, Ronald and Moses, Yoram and Halpern, Joseph Y and Vardi, Moshe Y},
+  year={2003},
+  publisher={MIT press}
+}
+
+@article{baltag2008qualitative,
+  title={A qualitative theory of dynamic interactive belief revision},
+  author={Baltag, Alexandru and Smets, Sonja},
+  journal={Logic and the foundations of game and decision theory (LOFT 7)},
+  volume={3},
+  pages={9--58},
+  year={2008},
+  publisher={Texts in Logic and Games}
+}
+
+@article{plaza2007logics,
+  title={Logics of public communications},
+  author={Plaza, Jan},
+  journal={Synthese},
+  volume={158},
+  number={2},
+  pages={165--179},
+  year={2007},
+  publisher={Springer}
+}
+
+@book{van_Ditmarsch_2008,
+    doi = {10.1007/978-1-4020-5839-4},
+    year = 2008,
+    publisher = {Springer Netherlands},
+    author = {Hans van Ditmarsch and Wiebe van der Hoek and Barteld Kooi},
+    title = {Dynamic Epistemic Logic}
+}
+
+@article{singleton2021logic,
+      title={A Logic of Expertise},
+      author={Joseph Singleton},
+      year={2021},
+      url={https://arxiv.org/abs/2107.10832},
+      journal={ESSLLI 2021 Student Session},
+}
+
+@phdthesis{ozgun_evidence,
+  TITLE = {{Evidence in Epistemic Logic : A Topological Perspective}},
+  AUTHOR = {{\"{O}}zg{\"{u}}n, Ayb{\"{u}}ke},
+  NUMBER = {2017LORR0200},
+  SCHOOL = {{Universit{\'e} de Lorraine}},
+  YEAR = {2017},
+  MONTH = Oct,
+  TYPE = {Theses},
+  PDF = {https://tel.archives-ouvertes.fr/tel-01682932/file/DDOC_T_2017_0200_OZGUN.pdf},
+  HAL_ID = {tel-01682932},
+  HAL_VERSION = {v1},
+}
+
+@incollection{van2007modal,
+  title={Modal logics of space},
+  author={van Benthem, Johan and Bezhanishvili, Guram},
+  booktitle={Handbook of spatial logics},
+  pages={217--298},
+  year={2007},
+  publisher={Springer}
+}
+
+@book{blackburn2002modal,
+  title={Modal logic},
+  author={Blackburn, Patrick and De Rijke, Maarten and Venema, Yde},
+  volume={53},
+  year={2002},
+  publisher={Cambridge University Press}
+}
+
+@book{chi2014nature,
+  title={The nature of expertise},
+  author={Chi, Michelene TH and Glaser, Robert and Farr, Marshall J},
+  year={2014},
+  publisher={Psychology Press}
+}
+
+@article{ericsson2010expertise,
+  title={Expertise.},
+  author={Ericsson, K Anders and Towne, Tyler J},
+  journal={WIREs Cognitive Science},
+  year={2010},
+  publisher={Wiley-Blackwell Publishing Ltd.}
+}
+
+@book{collins2008rethinking,
+  title={Rethinking expertise},
+  author={Collins, Harry and Evans, Robert},
+  year={2008},
+  publisher={University of Chicago Press}
+}
+
+@article{kilov2021brittleness,
+  title={The brittleness of expertise and why it matters},
+  author={Kilov, Daniel},
+  journal={Synthese},
+  volume={199},
+  number={1},
+  pages={3431--3455},
+  year={2021},
+  publisher={Springer}
+}
+
+@article{whyte2010trust,
+  title={Trust, expertise, and the philosophy of science},
+  author={Whyte, Kyle Powys and Crease, Robert P},
+  journal={Synthese},
+  volume={177},
+  number={3},
+  pages={411--425},
+  year={2010},
+  publisher={Springer}
+}
+
+@article{goldman2018expertise,
+  title={Expertise},
+  author={Goldman, Alvin I},
+  journal={Topoi},
+  volume={37},
+  number={1},
+  pages={3--10},
+  year={2018},
+  publisher={Springer}
+}
+@InProceedings{hunter_building_2021,
+author="Hunter, Aaron",
+editor="Pham, Duc Nghia
+and Theeramunkong, Thanaruk
+and Governatori, Guido
+and Liu, Fenrong",
+title="Building Trust for Belief Revision",
+booktitle="PRICAI 2021: Trends in Artificial Intelligence",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="543--555",
+isbn="978-3-030-89188-6"
+}
+
+@inproceedings{dastani2004inferring,
+  title={Inferring trust},
+  author={Dastani, Mehdi and Herzig, Andreas and Hulstijn, Joris and Van Der Torre, Leendert},
+  booktitle={CLIMA},
+  pages={144--160},
+  year={2004},
+  organization={Springer}
+}
+
+@article{van2011dynamic,
+  title={Dynamic logics of evidence-based beliefs},
+  author={{van Benthem}, Johan and Pacuit, Eric},
+  journal={Studia Logica},
+  volume={99},
+  number={1},
+  pages={61--92},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{vanbenthem2014106,
+title = {Evidence and plausibility in neighborhood structures},
+journal = {Annals of Pure and Applied Logic},
+volume = {165},
+number = {1},
+pages = {106-133},
+year = {2014},
+author = {Johan {van Benthem} and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
+keywords = {Modal logic, Neighborhood semantics, Plausibility ordering, Evidence-based reasoning, Doxastic logic},
+}
+
+@article{booth_trust_2018,
+	title = {Trust as a {Precursor} to {Belief} {Revision}},
+	volume = {61},
+	journal = {JAIR},
+	author = {Booth, Richard and Hunter, Aaron},
+	year = {2018},
+	keywords = {belief revision, trust},
+	pages = {699--722},
+}
+
+@article{Liau_2003,
+	year = 2003,
+	publisher = {Elsevier {BV}},
+	volume = {149},
+	number = {1},
+	pages = {31--60},
+	author = {Churn-Jung Liau},
+	title = {Belief, information acquisition, and trust in multi-agent systems -- A modal logic formulation},
+	journal = {Artificial Intelligence}
+}
+
+@inproceedings{lorini2014trust,
+author = {Lorini, Emiliano and Jiang, Guifei and Perrussel, Laurent},
+title = {Trust-Based Belief Change},
+year = {2014},
+booktitle = {Proc. ECAI},
+pages = {549--554},
+numpages = {6},
+}
+
+@article{herzig2010logic,
+  title={A logic of trust and reputation},
+  author={Herzig, Andreas and Lorini, Emiliano and H{\"u}bner, Jomi F and Vercouter, Laurent},
+  journal={Logic Journal of the IGPL},
+  volume={18},
+  number={1},
+  pages={214--244},
+  year={2010},
+  publisher={OUP}
+}
+
+@inproceedings{singleton_booth_bipartite,
+author = {Singleton, Joseph and Booth, Richard},
+title = {Rankings for Bipartite Tournaments via Chain Editing},
+year = {2021},
+isbn = {9781450383073},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+abstract = {Ranking the participants of a tournament has applications in voting, paired comparisons analysis, sports and other domains. In this paper we introduce bipartite tournaments, which model situations in which two different kinds of entity compete indirectly via matches against players of the opposite kind; examples include education (students/exam questions) and solo sports (golfers/courses). In particular, we look to find rankings via chain graphs, which correspond to bipartite tournaments in which the sets of adversaries defeated by the players on one side are nested with respect to set inclusion. Tournaments of this form have a natural and appealing ranking associated with them. We apply chain editing -- finding the minimum number of edge changes required to form a chain graph -- as a new mechanism for tournament ranking. The properties of these rankings are investigated in a probabilistic setting, where they arise as maximum likelihood estimators, and through the axiomatic method of social choice theory. Despite some nice properties, two problems remain: an important anonymity axiom is violated, and chain editing is NP-hard. We address both issues by relaxing the minimisation constraint in chain editing, and characterise the resulting ranking methods via a greedy approximation algorithm.},
+booktitle = {Proceedings of the 20th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {1236–1244},
+numpages = {9},
+keywords = {chain graphs, social choice, ranking, tournaments},
+location = {Virtual Event, United Kingdom},
+series = {AAMAS '21}
+}
+
