thm numbering uses section counter

--- a/macros.tex
+++ b/macros.tex
@@ -6,15 +6,15 @@
 \newcommand{\todo}[1]{{\color{red}[\textbf{TODO:} {#1}]}}
 
 % maths environments
-\theoremstyle{plain}\newtheorem{example}{Example}
-\theoremstyle{plain}\newtheorem{theorem}{Theorem}
-\theoremstyle{plain}\newtheorem{proposition}{Proposition}
-\theoremstyle{plain}\newtheorem{lemma}{Lemma}
-\theoremstyle{plain}\newtheorem{definition}{Definition}
+\theoremstyle{plain}\newtheorem{example}{Example}[section]
+\theoremstyle{plain}\newtheorem{theorem}{Theorem}[section]
+\theoremstyle{plain}\newtheorem{proposition}{Proposition}[section]
+\theoremstyle{plain}\newtheorem{lemma}{Lemma}[section]
+\theoremstyle{plain}\newtheorem{definition}{Definition}[section]
 \theoremstyle{plain}\newtheorem*{notation}{Notation}
-\theoremstyle{plain}\newtheorem{claim}{Claim}
-\theoremstyle{plain}\newtheorem{corollary}{Corollary}
-\theoremstyle{plain}\newtheorem{axiom}{Axiom}
+\theoremstyle{plain}\newtheorem{claim}{Claim}[section]
+\theoremstyle{plain}\newtheorem{corollary}{Corollary}[section]
+\theoremstyle{plain}\newtheorem{axiom}{Axiom}[section]
 
 % cleveref cannot deduce the plural form for the "claim" environment, so give
 % it explicity
