put KR paper in

--- a/references.bib
+++ b/references.bib
@@ -1254,3 +1254,258 @@ location = {Virtual Event, United Kingdom},
 series = {AAMAS '21}
 }
 
+@article{delgrande2018general,
+  title={General belief revision},
+  author={Delgrande, James P and Peppas, Pavlos and Woltran, Stefan},
+  journal={Journal of the ACM (JACM)},
+  volume={65},
+  number={5},
+  pages={1--34},
+  year={2018},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{alchourron1985logic,
+  title={On the logic of theory change: Partial meet contraction and revision functions},
+  author={Alchourr{\'o}n, Carlos E and G{\"a}rdenfors, Peter and Makinson, David},
+  journal={Journal of symbolic logic},
+  pages={510--530},
+  year={1985},
+  publisher={JSTOR}
+}
+
+@article{kraus1990nonmonotonic,
+  title={Nonmonotonic reasoning, preferential models and cumulative logics},
+  author={Kraus, Sarit and Lehmann, Daniel and Magidor, Menachem},
+  journal={Artificial intelligence},
+  volume={44},
+  number={1-2},
+  pages={167--207},
+  year={1990},
+  publisher={Elsevier}
+}
+@article{grove1988two,
+  title={Two modellings for theory change},
+  author={Grove, Adam},
+  journal={Journal of philosophical logic},
+  pages={157--170},
+  year={1988},
+  publisher={JSTOR}
+}
+
+@article{katsuno_1991,
+	doi = {10.1016/0004-3702(91)90069-v},
+	url = {https://doi.org/10.1016%2F0004-3702%2891%2990069-v},
+	year = 1991,
+	month = {12},
+	publisher = {Elsevier {BV}},
+	volume = {52},
+	number = {3},
+	pages = {263--294},
+	author = {Hirofumi Katsuno and Alberto O. Mendelzon},
+	title = {Propositional knowledge base revision and minimal change},
+	journal = {Artificial Intelligence}
+}
+
+@article{ferme1999selective,
+  title={Selective revision},
+  author={Ferm{\'e}, Eduardo L and Hansson, Sven Ove},
+  journal={Studia Logica},
+  volume={63},
+  number={3},
+  pages={331--342},
+  year={1999},
+  publisher={Springer}
+}
+
+@article{hansson_2001,
+	doi = {10.2307/2694963},
+	url = {https://doi.org/10.2307%2F2694963},
+	year = 2001,
+	month = {12},
+	publisher = {Cambridge University Press ({CUP})},
+	volume = {66},
+	number = {4},
+	pages = {1581--1596},
+	author = {Sven Ove Hansson and Eduardo Leopoldo Ferm{\'{e}} and John Cantwell and Marcelo Alejandro Falappa},
+	title = {Credibility limited revision},
+	journal = {Journal of Symbolic Logic}
+}
+
+@article{booth_trust_2018,
+	title = {Trust as a {Precursor} to {Belief} {Revision}},
+	volume = {61},
+	journal = {J. Artif. Intell. Res.},
+	author = {Booth, Richard and Hunter, Aaron},
+	year = {2018},
+	keywords = {belief revision, trust},
+	pages = {699--722},
+}
+
+@article{delgrande2006iterated,
+  title={Iterated Revision as Prioritized Merging.},
+  author={Delgrande, James P and Dubois, Didier and Lang, J{\'e}r{\^o}me},
+  journal={KR},
+  volume={6},
+  pages={210--220},
+  year={2006}
+}
+
+@InProceedings{yasser_21,
+author="Yasser, Ammar
+and Ismail, Haythem O.",
+editor="Faber, Wolfgang
+and Friedrich, Gerhard
+and Gebser, Martin
+and Morak, Michael",
+title="Trust Is All You Need: From Belief Revision to Information Revision",
+booktitle="Logics in Artificial Intelligence",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="50--65",
+isbn="978-3-030-75775-5"
+}
+
+@article{li_survey_2016,
+	title = {A {Survey} on {Truth} {Discovery}},
+	volume = {17},
+	issn = {1931-0145},
+	url = {http://doi.acm.org/10.1145/2897350.2897352},
+	doi = {10.1145/2897350.2897352},
+	number = {2},
+	journal = {SIGKDD Explor. Newsl.},
+	author = {Li, Yaliang and Gao, Jing and Meng, Chuishi and Li, Qi and Su, Lu and Zhao, Bo and Fan, Wei and Han, Jiawei},
+	month = {2},
+	year = {2016},
+	keywords = {td, survey},
+	pages = {1--16},
+}
+
+@article{singleton2021logic,
+      title={A Logic of Expertise},
+      author={Joseph Singleton},
+      year={2021},
+      note={https://arxiv.org/abs/2107.10832},
+      journal={ESSLLI 2021 Student Session},
+}
+
+@book{blackburn2002modal,
+    place={Cambridge},
+    title={Modal Logic},
+    publisher={Cambridge University Press},
+    author={Blackburn, Patrick and Rijke, Maarten de and Venema, Yde},
+    year={2001},
+    collection={Cambridge Tracts in Theoretical Computer Science}
+}
+
+@incollection{peppas_2008,
+    title = {Belief Revision},
+    chapter = {8},
+    editor = {Frank {van Harmelen} and Vladimir Lifschitz and Bruce Porter},
+    series = {Foundations of Artificial Intelligence},
+    publisher = {Elsevier},
+    volume = {3},
+    pages = {317-359},
+    year = {2008},
+    booktitle = {Handbook of Knowledge Representation},
+    issn = {1574-6526},
+    doi = {https://doi.org/10.1016/S1574-6526(07)03008-8},
+    url = {https://www.sciencedirect.com/science/article/pii/S1574652607030088},
+    author = {Pavlos Peppas},
+}
+
+@article{hansson1999survey,
+  title={A survey of non-prioritized belief revision},
+  author={Hansson, Sven Ove},
+  journal={Erkenntnis},
+  volume={50},
+  number={2},
+  pages={413--427},
+  year={1999},
+  publisher={Springer}
+}
+
+@inproceedings{hunter_building_21,
+author="Hunter, Aaron",
+editor="Pham, Duc Nghia
+and Theeramunkong, Thanaruk
+and Governatori, Guido
+and Liu, Fenrong",
+title="Building Trust for Belief Revision",
+booktitle="PRICAI 2021: Trends in Artificial Intelligence",
+year="2021",
+publisher="Springer International Publishing",
+address="Cham",
+pages="543--555",
+isbn="978-3-030-89188-6"
+}
+
+@article{konieczny2002merging,
+  title={Merging information under constraints: a logical framework},
+  author={Konieczny, S{\'e}bastien and Pino P{\'e}rez, Ram{\'o}n},
+  journal={Journal of Logic and Computation},
+  volume={12},
+  number={5},
+  pages={773--808},
+  year={2002},
+  publisher={Oxford University Press}
+}
+
+@inproceedings{schwind2020,
+    title     = {{Non-Prioritized Iterated Revision: Improvement via Incremental Belief Merging}},
+    author    = {Schwind, Nicolas and Konieczny, Sébastien},
+    booktitle = {{Proceedings of the 17th International Conference on Principles of Knowledge Representation and Reasoning}},
+    pages     = {738--747},
+    year      = {2020},
+    month     = {9},
+    doi       = {10.24963/kr.2020/76},
+    url       = {https://doi.org/10.24963/kr.2020/76},
+  }
+
+@article{Konieczny_2011,
+        doi = {10.1007/s10992-011-9175-5},
+        url = {https://doi.org/10.1007%2Fs10992-011-9175-5},
+        year = 2011,
+        month = {mar},
+        publisher = {Springer Science and Business Media {LLC}},
+        volume = {40},
+        number = {2},
+        pages = {239--270},
+        author = {S{\'{e}}bastien Konieczny and Ram{\'{o}}n Pino P{\'{e}}rez},
+        title = {Logic Based Merging},
+        journal = {Journal of Philosophical Logic}
+}
+
+@book{handbook_epistemic,
+title = "Handbook of Epistemic Logic",
+editor = "{van Ditmarsch}, Hans and {van der Hoek}, Wiebe and Halpern, {Joseph Y.} and Barteld Kooi",
+year = "2015",
+language = "English",
+isbn = "978-1-84890-158-2",
+publisher = "College Publications",
+}
+
+@article{gregoire_fusion_2006,
+title = "Logic-based approaches to information fusion",
+journal = "Information Fusion",
+volume = "7",
+number = "1",
+pages = "4 - 18",
+year = "2006",
+note = "Logic-based Approaches to Information Fusion",
+issn = "1566-2535",
+doi = "https://doi.org/10.1016/j.inffus.2005.08.001",
+url = "http://www.sciencedirect.com/science/article/pii/S1566253505000771",
+author = "Eric Grégoire and Sébastien Konieczny",
+keywords = "Logic-based fusion, Information fusion, Belief fusion, Goal fusion",
+abstract = "This survey covers recent contributions from the artificial intelligence research literature about logic-based information fusion. First, the main current approaches dealing with the standard propositional logic formalism are presented and compared. Then, techniques for fusing weighted belief bases are discussed. Finally, relationships between propositional information fusion and related areas such as belief revision and multi-agent negotiation are mentioned."
+}
+
+@article{singleton_booth_22_preprint,
+      title={Who's the Expert? {O}n Multi-source Belief Change},
+      author = {Singleton, Joseph and Booth, Richard},
+      year={2022},
+      note = {https://arxiv.org/abs/2205.00077},
+}
+
